fix: Shift spoons image to the right boundary

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 .page {
+    overflow-x: hidden;
     font-family: 'Nunito', 'Helvetica', sans-serif;
     font-style: normal;
     color: #3E3F43;
@@ -18,7 +19,6 @@
   font-weight: normal;
   font-size: 36px;
   line-height: 49px;
-
   color: #3E3F43;
 }
 
@@ -174,6 +174,12 @@
   color: #3E3F43;
 }
 
+.about-us__heading_size_relaxed {
+  min-width: 448px;
+  width: unset;
+  height: unset;
+}
+
 .about-us__accent {
   font-weight: 800;
 }
@@ -188,7 +194,15 @@
   color: #000000;
 }
 
+.about-us__paragraph_size_relaxed {
+  min-width: 448px;
+  width: unset;
+  height: unset;
+}
+
 .about-us__image {
+  position: relative;
+  left: 100%;
   width: 287px;
   height: 384px;
 }
@@ -450,4 +464,3 @@
   line-height: 16px;
   color: #8D8D8D;
 }
-
